[gd_scene load_steps=2 format=3 uid="uid://d2trade8aa"]

[ext_resource type="Script" path="res://scenes/ui/screens/TradeScreen.gd" id="1_trade"]

[node name="TradeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trade")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "ü§ù Direkt Ticaret"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "Geri"
theme_override_font_sizes/font_size = 24

[node name="PlayerSearchPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox/PlayerSearchPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayerInput" type="LineEdit" parent="MarginContainer/VBox/PlayerSearchPanel/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Oyuncu adƒ± giriniz..."
theme_override_font_sizes/font_size = 24

[node name="SearchButton" type="Button" parent="MarginContainer/VBox/PlayerSearchPanel/HBox"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
text = "Ara"
theme_override_font_sizes/font_size = 24

[node name="TradeContainer" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MyPanel" type="PanelContainer" parent="MarginContainer/VBox/TradeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/TradeContainer/MyPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/TradeContainer/MyPanel/VBox"]
layout_mode = 2
text = "Senin Teklifin"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox/TradeContainer/MyPanel/VBox"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
size_flags_vertical = 3

[node name="MyItemList" type="VBoxContainer" parent="MarginContainer/VBox/TradeContainer/MyPanel/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AddItemButton" type="Button" parent="MarginContainer/VBox/TradeContainer/MyPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "+ Item Ekle"
theme_override_font_sizes/font_size = 24

[node name="TheirPanel" type="PanelContainer" parent="MarginContainer/VBox/TradeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/TradeContainer/TheirPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/TradeContainer/TheirPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Kar≈üƒ± Oyuncu"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox/TradeContainer/TheirPanel/VBox"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
size_flags_vertical = 3

[node name="TheirItemList" type="VBoxContainer" parent="MarginContainer/VBox/TradeContainer/TheirPanel/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusLabel" type="Label" parent="MarginContainer/VBox/TradeContainer/TheirPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Bekleniyor..."
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
horizontal_alignment = 1

[node name="ActionButtons" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBox/ActionButtons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
text = "‚úì ONAYLA"
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)

[node name="CancelButton" type="Button" parent="MarginContainer/VBox/ActionButtons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
text = "‚úó ƒ∞PTAL"
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
